[package]
description = "Reference-counted UTF-8 text"
edition = "2018"
homepage = "https://github.com/Cyborus04/bytes-text"
license = "Apache-2.0 OR MIT"
name = "bytes-text"
repository = "https://github.com/Cyborus04/bytes-text"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
soft_assert = "0.1"
